# dm-audiomidi

./: CMakeLists.txt  ChangeLog  LICENSE  README.md
builds/MacOS/dm-audiomidi.xcodeproj/: project.pbxproj
builds/iOS/dm-audiomidi.xcodeproj/: project.pbxproj
include/: AudioBuffer.hpp  AudioFormat.hpp  AudioFormatOptions.hpp  AudioFormatTypes.h  AudioFormatsManager.hpp
samples/: CMakeLists.txt  dm_audiomidi_converter.cpp  dm_audiomidi_mididump.cpp
src/: AudioFormat_CoreAudio.cpp  AudioFormat_CoreAudio.hpp  AudioFormat_ogg.cpp  AudioFormat_ogg.hpp  AudioFormatsManager.cpp  VideoUtilities.cpp
