CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../dm-cmake)
INCLUDE(SetTargetOptions)
INCLUDE(SetPlatformDefines)

SET_PLATFORM_DEFINES()
SET(compile_options "")

ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/.." "dm-audiomidi")
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/../../dm-utils" "dm-utils")
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/../include/")
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/../../dm-utils/include")

MESSAGE(STATUS ${DM_AUDIOMIDI_LINK_LIBS})

ADD_EXECUTABLE(dm_audiomidi_converter "${CMAKE_CURRENT_SOURCE_DIR}/dm_audiomidi_converter.cpp")
TARGET_LINK_LIBRARIES(dm_audiomidi_converter dm-audiomidi dm-utils ${DM_AUDIOMIDI_LINK_LIBS})
SET_TARGET_PROPERTIES(dm_audiomidi_converter PROPERTIES LINK_FLAGS "${DM_AUDIOMIDI_LINK_FLAGS} ${DM_UTILS_LINK_FLAGS} ${DM_LOG_LINK_FLAGS}")
FSET_TARGET_OPTIONS(dm_audiomidi_converter "")



